Bug 237513 - kcalc does not fully emulate Gtk+ style
Summary: kcalc does not fully emulate Gtk+ style
Status: RESOLVED FIXED
Alias: None
Product: kcalc
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Klaus Niederkrüger
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-13 15:52 UTC by Krenar Qehaja
Modified: 2010-08-28 15:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments
kcalc Gtk+ style emulate failure (444.47 KB, image/png)
2010-05-13 16:00 UTC, Krenar Qehaja
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Krenar Qehaja 2010-05-13 15:52:26 UTC
Version:           2.6 (using KDE 4.4.3)
OS:                Linux
Installed from:    Ubuntu Packages

kcalc does not fully emulate Gtk+ style (button numbers on the interface do not feel Gtk-ish), and the problem seems to be specific to kcalc as no other Qt4/KDE4 app seems to suffer from this problem, AFAICT.

To reproduce:
kcalc -style gtk+
Comment 1 Krenar Qehaja 2010-05-13 16:00:08 UTC
Created attachment 43540 [details]
kcalc Gtk+ style emulate failure

You can tell the difference between the kcalc's main interface and the About Dialog. The About Dialog emulates the Gtk+ style as it should while the main interface of kcalc does not really; number buttons are squarish and do not feel Gtk.
Comment 2 Christoph Feck 2010-08-28 15:33:21 UTC
SVN commit 1169124 by cfeck:

Do not apply style sheets when using default button colors

Qt cannot handle style sheets with a changed palette on "pixmap based"
styles, and falls back to the "Windows" style.

To work around styles' limitation, we only set the style sheet if any
of the colors has been customized. This ensures all buttons get a
consistent frame even if only one of the colors has been changed.

If you still see this bug, remove .kcalcrc

BUG: 237513
FIXED-IN: 4.6.0


 M  +11 -0     kcalc.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1169124